--- a/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 					<!-- Sidebar: Info, Price, Buttons etc. -->
-					<aside class="col-xs-12 col-md-6 col-lg-5 pd-sidebar-col">
+					<aside class="col-xs-12 col-md-6 col-lg-5 pd-sidebar-col zoom-window-container">
 						@{ Html.RenderPartial("Product.Info", Model); }
 						@{ Html.RenderPartial("Product.SideBar", Model); }
 					</aside>
