--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -116,6 +116,7 @@ $pagination-active-border:      $pagination-border-color;
 @import "shared/_animate.scss";
 @import "slick/slick.scss";
 @import "_slick-theme.scss";
+@import "_drift-theme.scss";
 
 // Main
 @import "_shopbar.scss";
@@ -503,21 +504,23 @@ body {
     display: none !important;
 }
 
+.gal-modal {
+    .gal {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
 
+    .slick-slide {
+        text-align: center;
+    }
 
-// Zooming
-// ======================================
-
-.zoomContainer {
-    z-index: 1;
+    .slick-slide > img {
+        position: relative;
+        margin: auto;
+        width: auto;
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
 
-.zoomWindow {
-    border: 1px solid #999;
-}
-
-.zoomWindow,
-.zoomLens {
-    box-shadow: 0 0 10px rgba(0,0,0, 0.4);
-    display: none;
-}
