--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
@@ -7,6 +7,7 @@
 
 <div id="pd-gallery-container-outer">
 	<div id="pd-gallery" class="gal-box m-b-1">
+		<!-- Thumbnail navigation -->
 		<div class="gal-nav-cell@(Model.PictureModels.Count <= 1 ? " gal-nav-hidden" : " ")">
 			<div class="gal-nav">
 				<div class="gal-list">
@@ -25,8 +26,9 @@
 				</div>
 			</div>
 		</div>
-
+		<!-- Picture -->
 		<div class="gal-cell">
+			<button type="button" class="btn btn-secondary oldgal">Old Gallery</button>
 			<div class="gal">
 				@if (Model.PictureModels.Count > 0)
 				{
@@ -37,11 +39,11 @@
 							<a class="gal-item-viewport" href="@picture.FullSizeImageUrl" data-thumg-image="@picture.ThumbImageUrl" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-picture-id="@picture.PictureId">
 								@if (i == Model.GalleryStartIndex)
 								{
-									<img class="gal-item-content" src="@picture.ImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
+									<img class="gal-item-content" src="@picture.ImageUrl" data-zoom="@picture.FullSizeImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
 								}
 								else
 								{
-									<img class="gal-item-content" data-lazy="@picture.ImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
+									<img class="gal-item-content" data-lazy="@picture.ImageUrl" data-zoom="@picture.FullSizeImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
 								}
 							</a>
 						</div>
