--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -48,10 +48,7 @@
 		"~/Scripts/underscore.mixins.js",
 		jsRoot + "smartstore.jquery.utils.js",
 		jsRoot + "jquery.ba-outside-events.js",
-		jsRoot + "jquery.preload.js",
 		jsRoot + "jquery.transit.js",
-		jsRoot + "jquery.menu-aim.js",
-		jsRoot + "jquery.mobile-events.min.js",
 		jsRoot + "smartstore.doAjax.js",
 		jsRoot + "jquery.addeasing.js",
 		jsRoot + "smartstore.eventbroker.js",
@@ -60,27 +57,21 @@
 		// Bootstrap
 		jsRoot + "tether.js",
 		bootstrapJsRoot + "bootstrap.js",
-		// Bootstrap custom
 		bootstrapJsRoot + "bootstrap-datetimepicker.js",
-		bootstrapJsRoot + "bootstrap-typeahead.js",
 		// Shared UI
 		jsRoot + "smartstore.viewport.js",
-		jsRoot + "smartstore.placeholder.js",
 		jsRoot + "select2.js",
 		contentRoot + "slick/slick.js",
+		jsRoot + "Drift.js",
 		jsRoot + "smartstore.selectwrapper.js",
 		jsRoot + "smartstore.throbber.js",
-		jsRoot + "smartstore.navbar.js",
 		jsRoot + "smartstore.thumbzoomer.js",
-		jsRoot + "smartstore.column-equalizer.js",
-		jsRoot + "smartstore.scrollbutton.js",
 		jsRoot + "smartstore.keynav.js",
 		jsRoot + "smartstore.articlelist.js",
 		jsRoot + "smartstore.product.js",
 		jsRoot + "jquery.pnotify.js",
 		jsRoot + "jquery.bootstrap-touchspin.js",
 		jsRoot + "jquery.scrollTo.js",
-		jsRoot + "jquery.serialScroll.js",
 		jsRoot + "smartstore.globalize.adapter.js",
 		jsRoot + "offcanvas.js",
 		jsRoot + "hammer.js",
