--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_ColumnsOne.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_ColumnsOne.cshtml
@@ -7,6 +7,10 @@
     @RenderSection("teaser", required: false)
 }
 
+@section end {
+	@RenderSection("end", required: false)
+}
+
 <div id="content-center" class="col-md-12">
     @Html.Widget("main_column_before")
     @RenderBody()
