--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -343,7 +343,7 @@ body {
 }
 
 
-// Image centering
+// Imaging
 // ------------------------------------------------------
 
 .img-center-container {
