--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -18,7 +18,7 @@
 	<div class="art-picture-block">
 		@if (picture.Title.HasValue())
 		{
-			<a class="art-picture img-center-container" href="@artDetailUrl" title="@picture.Title">
+			<a class='art-picture img-center-container@(picture.PictureId == 0 ? " no-picture" : "")' href="@artDetailUrl" title="@picture.Title" @Html.Attr("data-content", T("Common.NoImageAvail"), picture.PictureId == 0)>
 				<img src="@picture.ImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
 			</a>
 		}
