--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
@@ -2,6 +2,7 @@
 @using SmartStore.Web.Models.Catalog;
 @{
 	Html.AddScriptParts("~/bundles/smart-gallery");
+	var defaultPicture = Model.DefaultPictureModel;
 }
 
 <div id="pd-gallery-container-outer">
@@ -15,7 +16,14 @@
 						{
 							var picture = Model.PictureModels[i];
 							<figure class="gal-item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-								<a class="gal-item-viewport" itemprop="contentUrl" href="@picture.FullSizeImageUrl" data-width="@picture.FullSizeImageWidth" data-height="@picture.FullSizeImageHeight" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-gallery="default" data-picture-id="@picture.PictureId">
+								<a class="gal-item-viewport" 
+								   itemprop="contentUrl" 
+								   href="@picture.FullSizeImageUrl" 
+								   data-width="@picture.FullSizeImageWidth" 
+								   data-height="@picture.FullSizeImageHeight" 
+								   data-medium-image="@picture.ImageUrl" 
+								   title="@Model.Name" 
+								   data-picture-id="@picture.PictureId">
 									<img class="gal-item-content" src="@picture.ThumbImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
 								</a>
 							</figure>
@@ -47,48 +55,15 @@
 						</div>
 					}
 				}
+				else if (defaultPicture.ImageUrl.HasValue())
+				{
+					<div class="gal-item">
+						<div class="gal-item-viewport no-picture" data-content="@T("Common.NoImageAvail")">
+							<img class="gal-item-content" src="@defaultPicture.ImageUrl" alt="@defaultPicture.AlternateText" title="@defaultPicture.Title" />
+						</div>
+					</div>
+				}
 			</div>
-		</div>
-	</div>
-</div>
-
-
-<div id="x-pd-gallery" class="x-pd-gallery hidden-xs-up">
-	<div class="sg-image-wrapper">
-		@if (Model.DefaultPictureModel.ImageUrl.HasValue())
-		{
-			<img alt="@Model.DefaultPictureModel.AlternateText"
-				 title="@Model.DefaultPictureModel.Title"
-				 src="@Model.DefaultPictureModel.ImageUrl"
-				 itemprop="image" />
-		}
-	</div>
-
-	<div class="sg-nav">
-		<div class="sg-thumbs">
-			<ul class="sg-thumb-list">
-				@if (Model.PictureModels.Count > 1)
-				{
-					for (int i = 0; i < Model.PictureModels.Count; i++)
-					{
-						var picture = Model.PictureModels[i];
-
-						<li data-picture-id="@picture.PictureId">
-							<a class="sg-thumb-list-link" href="@picture.FullSizeImageUrl" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-gallery="x-default">
-								<img class="sg-thumb-list-img" src="@picture.ThumbImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
-							</a>
-						</li>
-					}
-				}
-				else if (Model.DefaultPictureModel.ThumbImageUrl.HasValue())
-				{
-					<li data-picture-id="@Model.DefaultPictureModel.PictureId">
-						<a class="sg-thumb-list-link" href="@Model.DefaultPictureModel.FullSizeImageUrl" data-medium-image="@Model.DefaultPictureModel.ImageUrl" data-gallery="x-default">
-							<img class="sg-thumb-list-img" src="@Model.DefaultPictureModel.ThumbImageUrl" alt="@Model.DefaultPictureModel.AlternateText" title="@Model.DefaultPictureModel.Title" />
-						</a>
-					</li>
-				}
-			</ul>
 		</div>
 	</div>
 </div>
