--- a/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
@@ -104,12 +104,13 @@
 				<div class="pswp__item"></div>
 			</div>
 			<div class="pswp__ui pswp__ui--hidden">
-				<div class="pswp__top-bar">
+				<div class="pswp__top-bar clearfix">
 					<div class="pswp__counter"></div>
+					<div class="pswp__zoom-controls">
+						<button class="pswp__button pswp-action pswp__button--zoom" title="Zoom in/out"></button>
+						<button class="pswp__button pswp-action pswp__button--fs" title="Toggle fullscreen"></button>
+					</div>
 					<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-					@*<button class="pswp__button pswp__button--share" title="Share"></button>*@
-					<button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-					<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 					<!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
 					<!-- element will get class pswp__preloader--active when preloader is running -->
 					<div class="pswp__preloader">
