Theming: some tweaking for footer social buttons

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_artlist.scss
@@ -177,6 +177,7 @@ $art-active-border-color:       rgba(0,0,0, 0.2);
     position: absolute;
     left: 0;
     top: 20px;
+    z-index: 10;
 }
 
 .art-badge {
