--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Info.cshtml
@@ -7,8 +7,8 @@
 }
 
 <div class="pd-info m-b-1">
-	<div class="page-title x-hidden-md-down" itemprop="name">
-		<h1 class="pd-name pd-name-sm">
+	<div class="page-title x-hidden-md-down">
+		<h1 class="pd-name pd-name-sm" itemprop="name">
 			@Model.Name
 		</h1>
 	</div>
