--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_product.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_product.scss
@@ -1,6 +1,6 @@
 /// <reference path="bs4/scss/bootstrap.scss" />
 
-$pd-sidebar-bg:                 $gray-lightest;
+$pd-offer-bg:                   $gray-lightest;
 $pd-price-color:                $body-color;
 $pd-price-offer-color:          $brand-danger;
 $pd-line-height:                1.3;
@@ -42,8 +42,8 @@ $pd-line-height:                1.3;
     margin-bottom: 0;
 }
 
-.pd-sidebar {
-    background: $pd-sidebar-bg;
+.pd-offer {
+    background: $pd-offer-bg;
     padding: $grid-gutter-width / 2;
     line-height: $pd-line-height;
 }
@@ -77,7 +77,7 @@ $pd-line-height:                1.3;
 // Prices
 // =====================================================
 
-.pd-price-block {
+.pd-offer-price {
     margin-bottom: 1rem;
 }
 
