--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Info.cshtml
@@ -3,21 +3,48 @@
 @using SmartStore.Web.Models.Catalog;
 
 @{
-
+	// TODO: (mc) > (mh) make setting > whether brand should be displayed att all in pd
+	var brand = Model.Manufacturers.FirstOrDefault();
 }
 
-<div class="pd-info m-b-1">
-	<div class="page-title x-hidden-md-down">
-		<h1 class="pd-name pd-name-sm" itemprop="name">
-			@Model.Name
-		</h1>
-	</div>
-	@if (Model.ShortDescription.HasValue())
-	{
-		<div class="pd-description">
-			@Html.Raw(Model.ShortDescription)
+<div class="pd-info">
+	<div class="pd-group">
+		<!-- Brand -->
+		@if (brand != null)
+		{
+			<div class="pd-brand-block">
+				<a class="pd-brand" href="@Url.RouteUrl("Manufacturer", new { SeName = brand.SeName })">
+					@if (brand.Picture != null && brand.Picture.ImageUrl.HasValue())
+					{
+						<img class="pd-brand-picture" src="@brand.Picture.ImageUrl" alt="@brand.Picture.AlternateText" title="@brand.Picture.Title" />
+					}
+					else
+					{
+						<span>@brand.Name</span>
+					}
+				</a>
+				<meta itemprop="brand" content="@brand.Name">
+			</div>
+		}
+
+		<!-- Title -->
+		<div class="page-title">
+			<h1 class="pd-name pd-name-sm" itemprop="name">
+				@Model.Name
+			</h1>
 		</div>
-	}
+
+		<!-- Short description -->
+		@if (Model.ShortDescription.HasValue())
+		{
+			<div class="pd-description">
+				@Html.Raw(Model.ShortDescription)
+			</div>
+		}
+	</div>
+
+	<!-- Product attributes (SKU, EAN, Weight etc.) -->
+	@{ Html.RenderPartial("Product.Attrs", Model); }
 </div>
 
 
