--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
@@ -16,59 +16,94 @@
 	var oldPrice2 = priceModel.PriceWithDiscount.HasValue() ? priceModel.Price : "";
 	var oldPrice2Label = priceModel.NoteWithoutDiscount;
 
-	var youSave = "";
+	if (oldPrice2.HasValue() && !oldPrice1.HasValue())
+	{
+		oldPrice1 = oldPrice2;
+		oldPrice2 = null;
+		oldPrice2Label = null;
+	}
+
+	var blocksHaveLabel = currentPriceLabel.HasValue() && oldPrice2Label.HasValue();
 }
 
 <div class="pd-offer-price" itemscope itemtype="http://schema.org/Offer">
-	<div class="m-b-2 hidden-xs-up">
-		<div>PriceWithDiscount: @priceModel.NoteWithDiscount @priceModel.PriceWithDiscount</div>
-		<div>OldPrice: @priceModel.OldPrice</div>
-		<div>Price: @priceModel.NoteWithoutDiscount @priceModel.Price</div>
-	</div>
-
-	<div class="pd-group clearfix">
-		<div class="pull-xs-left">
-			<div class="pd-price-label">@currentPriceLabel</div>
-			<div itemprop="price" content="@currentPriceValue.ToString("F", CultureInfo.InvariantCulture)"
-					class="pd-price@(priceModel.OldPrice.HasValue() ? " pd-price--offer" : "")@(priceModel.CallForPrice ? " pd-price--call" : "")">
-				@Html.Raw(currentPrice)
-			</div>
-		</div>
-		<div class="pull-xs-left m-l-1">
-			<div class="pd-price-label">@oldPrice2Label</div>
-			<div class="pd-price" style="text-decoration: line-through; color: #999; x-font-weight: 400">
-				@Html.Raw(oldPrice2)
-			</div>
-		</div>
-
-		@*@if (oldPrice2.HasValue())
-			{
-				if (oldPrice2Label.HasValue())
-				{
-					<span>@Html.Raw(oldPrice2Label):</span>
-				}
-				<span class="pd-oldprice">@Html.Raw(oldPrice2)</span>
-			}*@
-	</div>
-
-	@if (oldPrice1.HasValue() || youSave.HasValue())
+	@if (priceModel.CallForPrice)
 	{
-		<div class="pd-group">
-			@if (oldPrice1.HasValue())
-			{
-				<div>
-					@if (oldPrice1Label.HasValue())
+		<h4 class="pd-price pd-callforprice">@T("Products.CallForPrice")</h4>
+	}
+	else
+	{
+		<!-- Current price -->
+		<div class="pd-group clearfix">
+			<div class="pd-price-block">
+				<meta itemprop="priceCurrency" content="@WorkContext.WorkingCurrency.CurrencyCode" />
+				@if (blocksHaveLabel)
+				{
+					<div class="pd-price-label">@currentPriceLabel</div>
+				}
+				<div class="pd-price@(priceModel.OldPrice.HasValue() ? " pd-price--offer" : "")@(priceModel.CallForPrice ? " pd-price--call" : "")">
+					@if (!priceModel.CallForPrice)
 					{
-						<span>@Html.Raw(oldPrice1Label):</span>
+						<meta itemprop="price" content="@currentPriceValue.ToString("F", CultureInfo.InvariantCulture)" />
 					}
-					<span class="pd-oldprice">@Html.Raw(oldPrice1)</span>
+					@Html.Raw(currentPrice)
+				</div>
+			</div>
+			@if (oldPrice2.HasValue())
+			{
+				<div class="pd-price-block">
+					@if (blocksHaveLabel)
+					{
+						<div class="pd-price-label">@oldPrice2Label</div>
+					}
+					<div class="pd-price">
+						@Html.Raw(oldPrice2)
+					</div>
 				</div>
 			}
-			<div>
-				<span>@T("ShoppingCart.ItemYouSave"):</span>
-				<span>99,00 EUR (19 %)</span>
-			</div>
 		</div>
+
+		<!-- Regular price -->
+		if (oldPrice1.HasValue() || priceModel.SavingAmount.HasValue())
+		{
+			<div class="pd-group">
+				@if (oldPrice1.HasValue())
+				{
+					<div class="pd-oldprice-line">
+						@if (oldPrice1Label.HasValue())
+						{
+							<span>@Html.Raw(oldPrice1Label):</span>
+						}
+						<span class="pd-oldprice">@Html.Raw(oldPrice1)</span>
+					</div>
+				}
+				@if (priceModel.SavingAmount.HasValue())
+				{
+					<div class="pd-oldprice-line">
+						<span>@T("ShoppingCart.ItemYouSave"):</span>
+						<span>@priceModel.SavingAmount (<span class="pd-saving-percent">@priceModel.SavingPercent.ToString("N0") %</span>)</span>
+					</div>
+				}
+			</div>
+		}
+
+		<!-- Pangv & legal info -->
+		if (Model.IsBasePriceEnabled || Model.ShowLegalInfo)
+		{
+			<div class="pd-group">
+				@if (Model.IsBasePriceEnabled && Model.BasePriceInfo.HasValue())
+				{
+					<div class="pd-pangv">
+						@Html.Raw(Model.BasePriceInfo)
+					</div>
+				}
+				@if (Model.ShowLegalInfo && Model.LegalInfo.HasValue())
+				{
+					<div class="pd-legalinfo">
+						@Html.Raw(Model.LegalInfo)
+					</div>
+				}
+			</div>
+		}
 	}
-	<meta itemprop="priceCurrency" content="@WorkContext.WorkingCurrency.CurrencyCode" />
 </div>
