Number formatting: replaced F2 with N2

--- a/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
@@ -33,6 +33,8 @@
 	 * - Badges
 	 * - Better layout for stock info
 	 * - GTIN: user must specifiy the GTIN type on product level (gtin12, gtin13 etc.). See https://schema.org/Offer
+	 * - Reviews
+	 * - Reviews Microdata
 	 */
 }
 
