--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.cshtml
@@ -6,6 +6,10 @@
 
 }
 
+@section end {
+	@RenderSection("end", required: false)
+}
+
 <div class="pd-offer">
 	@if (!Model.AddToCart.DisableBuyButton || !Model.AddToCart.DisableWishlistButton)
 	{
