--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.StockInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.StockInfo.cshtml
@@ -36,7 +36,7 @@
 		</tr>
 	}
 
-	@if (true || Model.DisplayBackInStockSubscription)
+	@if (Model.DisplayBackInStockSubscription)
 	{
 		<tr class="pd-attr-stocksub">
 			<td>&nbsp;</td>
@@ -44,5 +44,23 @@
 		</tr>
 	}
 </table>
+
+
+@if (Model.DisplayBackInStockSubscription && Model.IsCurrentCustomerRegistered)
+{
+	@section end{{
+		<div id="back-in-stock-subscription-modal" class="modal fade" tabindex="-1">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-body">
+					</div>
+					<div class="modal-footer">
+						<button class="btn" data-dismiss="modal">@T("Common.OK")</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	}}
+}
 
 
